# stragedy

./: README.md
backend/: .env  .gitignore  Cargo.toml
backend/src/: error.rs  lib.rs  main.rs  tests.rs
backend/src/controllers/: game.rs  mod.rs  public_sites.rs
backend/src/helpers/: mod.rs  query.rs  updater.rs
backend/src/models/: player.rs
backend/src/repos/: generic_repo.rs  mod.rs  player_repo.rs  seeder.rs
backend/src/services/: auth.rs  config.rs  crypto.rs  game_manager.rs  mod.rs  planet_manager.rs
frontend/: .gitignore  Cargo.toml  README.md  package.json
frontend/_templates/comp/new/: code.ejs.t
frontend/_templates/route/new/: code.ejs.t  ins.ejs.t
frontend/public/: index.html  serve.json
frontend/src/: api.rs  app.rs  handlers.rs  lib.rs  storage.rs
frontend/src/components/: custom_button.rs  custom_text_input.rs  game_menu.rs  game_menu_button.rs  login_form.rs  mod.rs  register_form.rs
frontend/src/routes/: error_route.rs  game_route.rs  index_route.rs  mod.rs
frontend/styles/: app.scss  custom_input.scss  font.scss  game_general.scss  paletta.scss  public_sites.scss
frotnend/: Cargo.toml
frotnend/_templates/comp/new/: ins.ejs.t
frotnend/_templates/route/new/: code.ejs.t
frotnend/src/: lib.rs
frotnend/src/routes/: mod.rs  register_route.rs
frotnend/styles/: app.scss
lib/: Cargo.toml
lib/src/: config.rs  error.rs  lib.rs  player.rs  regex.rs  requests.rs  responses.rs
lib/src/models/: building.rs  galaxy.rs  mod.rs  planet.rs  player.rs  resource.rs
lib/src/models/buildings/: mod.rs  resources.rs
