[package]
name = "backend"
version = "0.1.0"
authors = ["Barnabás Rátki <barna.ratki@gmail.com>"]
edition = "2018"

[dependencies]
lib = {path="../lib"}
bson = "0.14.1"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
rsgen = "0.2"
sha2 = "0.8.1"
hex = "0.4.2"
regex = "1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "7"
lazy_static = "1.4.0"
rocket_cors = "0.5.1"

[ dependencies.rocket]
version="0.4.4"
default-features=false

[dependencies.rocket_contrib]
version = "0.4.4"

[dependencies.mongodb]
version = "0.10.0"
default-features = false
features = ["sync"]
