[package]
authors = [
    "Kelly Thomas Kline <kellytk@sw-e.org>",
    "Samuel Rounce <me@samuelrounce.co.uk>",
    "Addme <yourself@mail.com>"
]
edition = "2018"
name = "webapp"
readme = "README.md"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "^0.2"
yew-router = "0.13.0"
yew = "0.16.2"
chrono = "0.4.11"
stdweb = "0.4.20"
lib = {path="../lib"}
http="0.2.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
anyhow = "1.0.31"
