[package]
name = "lib"
version = "0.1.0"
authors = ["Barnabás Rátki <barna.ratki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
regex = "1"
bson = "0.14.1"
chrono = { version = "0.4", features = ["serde"] }
